kubernetes/nextcloud/nextcloud-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: nextcloud
  name: nextcloud
