kubernetes/nextcloud/nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:22.2.0
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/bash
                  - -c
                  - apt-get update && apt-get install -y --no-install-recommends $(apt-cache search libmagickcore-6.q[0-9][0-9]-[0-9]-extra | cut -d " " -f1)
          name: nextcloud
          ports:
            - containerPort: 7070
          resources:
            requests:
              memory: "500M"
              cpu: "250m"
            limits:
              memory: "1000M"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-nextcloud
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-apps
            - mountPath: /var/www/html/config
              name: nextcloud-config
            - mountPath: /etc/apache2
              name: nextcloud-apache2
            - mountPath: /etc/letsencrypt
              name: nextcloud-letsencrypt
            - mountPath: /var/www/html/data
              name: nextcloud-data
      hostname: nextcloud
      restartPolicy: Always
      volumes:
        - name: nextcloud-nextcloud
          persistentVolumeClaim:
            claimName: nextcloud-nextcloud
        - name: nextcloud-apps
          persistentVolumeClaim:
            claimName: nextcloud-apps
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud-apache2
          persistentVolumeClaim:
            claimName: nextcloud-apache2
        - name: nextcloud-letsencrypt
          persistentVolumeClaim:
            claimName: nextcloud-letsencrypt
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
