kubernetes/nextcloud/nextcloud-service.yaml
apiVersion: v1
kind: Service
namespace: nextcloud
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 7070
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.7
